--- a/main.css
+++ b/main.css
@@ -1,42 +1,107 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
 }
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
+/* Container
+========================*/
+
+.container {
+    width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;   
+}
+
+/* Header 
+========================*/
 
 header {
-    background: url(images/banner.jpg) no-repeat center top / cover;
-    height: 800px;
-}
-.container {
-    width: 1100px;
-    margin: 0 auto;    
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+ 
 }
 
-.header_bg {
+.header__inner {
     display: flex;
     justify-content: space-between;
-    padding-top: 25px;
+    padding: 35px 10px;
     align-items: center;
-    border-bottom: 2px solid #fff;
-}
-.menu {
-    margin: 0;
-    padding: 0;
-    display: block;
+    border-bottom: 1px solid #fff;
 }
 
-.menu li {
-    float: left;
-    display: block;
-    margin-right: 40px;
-    padding-top: 10px;
-    font-size: 18px;
+/* Navigation 
+========================*/
+
+.nav {
+    display: flex;
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
-.menu li a {
+.nav_link {
+    margin-left: 50px;
     color: #fff;
-    list-style-type: none;
     text-decoration: none;
+    opacity: .75;
+    transition: opacity .1s linear;
 }
 
+.nav__link:first-child {
+    margin-left: 0px;
+}
+
+.nav_link:hover {
+    opacity: 1;
+    text-decoration: underline;
+}
+
+/* Offer 
+========================*/
+
+.offer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 750px;
+    padding-top: 100px;
+    text-align: center;
+    background: url(images/banner.jpg) no-repeat center / cover;
+}
+
+.offer__maintitle {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 65px;
+    line-height: 1.1;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.offer__subtitle {
+    font-size: 22px;
+    color: #fff;
+    line-height: 1.5;
+    font-weight: 400;
+    margin-top: 25px;
+    
+}
