--- a/main.css
+++ b/main.css
@@ -98,10 +98,66 @@ header {
 }
 
 .offer__subtitle {
+    margin-bottom: 60px;
     font-size: 22px;
     color: #fff;
     line-height: 1.5;
     font-weight: 400;
     margin-top: 25px;
-    
+
+}
+
+/* Button 
+========================*/
+
+.btn {
+    display: inline-block;
+    vertical-align: top;
+    padding: 14px 40px;
+    text-transform: uppercase;
+    font-size: 13px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 3px;
+
+}
+
+.btn--red {
+    background: #e84545;
+}
+
+.btn--red:hover {
+    background: #df2222;
+    opacity: 1;
+    transition: opacity .2s linear;
+}
+
+/* Content
+========================*/
+
+.content {
+    display: flex;
+    margin: 100px 0;
+}
+
+.content__item {
+    text-align: center;
+    width: 33.33333%;
+    padding: 20px;
+}
+
+.content__img {
+    margin-bottom: 20px;
+}
+
+.content__title {
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+}
+
+.content_info {
+
 }
