--- a/main.css
+++ b/main.css
@@ -161,5 +161,61 @@ header {
 }
 
 .content_info {
+    font-size: 14px;
+    line-height: 1.5;
+}
 
+/* Features
+========================*/
+.features {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.features_items {
+    width: 25%;
+    height: 350px;;
+    position: relative;
+    overflow: hidden;
+}
+
+.features_items:hover .main_features_item {
+    opacity: 1;
+}
+
+.features_photo {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    transform: translate3d(-50%, -50%, 0)
+}
+
+.main_features_item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: rgba(232, 69, 69, 0.9);
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    opacity: 0;
+    transition: opacity .2s linear;
+}
+    
+.features__title {
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+
+.features__text {
+    font-size: 14px;
+    color: #fff;
 }
