Добавили иконки социальных сетей и рамку.

--- a/main.css
+++ b/main.css
@@ -263,7 +263,27 @@ header {
 }
 
 .team_text {
+    margin-bottom: 20px;
     font-size: 14px;
     color: #6c7279;
     line-height: 1.5;
+}
+
+/* Social
+========================*/
+
+.social {
+    display: flex;
+
+}
+
+.social_item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    margin-right: 4px;
+
+    border: 1px solid #e8ecee;
 }
