--- a/main.css
+++ b/main.css
@@ -284,6 +284,81 @@ header {
     width: 40px;
     height: 40px;
     margin-right: 4px;
+    background-color: #fff;
 
+    
     border: 1px solid #e8ecee;
+    transition: background .1s linear;
 }
+
+.social_item:hover {
+background-color: #e8ecee;
+}
+
+.social_item:hover .social__icon {
+    fill: #e84545;
+    transition: .1s linear;
+}
+
+.social__icon {
+    display: block;
+    height: 18px;
+    fill: #c6cacc;
+}
+
+/* Reviews
+========================*/
+.reviews {
+    overflow: hidden;
+    background-color: #53354a;  
+}
+
+.reviews__item {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.reviews__photo {
+    width: 50%;
+    height: 500px;
+    position: relative;
+}
+
+.reviews__img {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  z-index: 1;  
+  transform: translateY(-50%);
+}
+
+.reviews__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    padding-left: 80px;
+}
+
+.review__text {
+    margin-bottom: 20px;
+    font-family: 'Cardo', sans-serif;
+    font-style: italic;
+    font-size: 36px;
+    line-height: 1.2emd;
+    color: #fff; 
+}
+
+.reviews__author {
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+
+
+
+
+
